# PTMK-test-task

./: CMakeLists.txt  main.cpp
